<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- Appsolut Composition Globals -->
    <string name="app_name">Song Scribe</string>
    <string name="menu_settings">Settings</string>
    
    <!-- Login/Register Splash -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_label">Email</string>
    <string name="email_hint">email@domain.com</string>
    <string name="password_label">Password</string>
    <string name="password_confirm_label">Password</string>
    <string name="password_hint">password</string>
    <string name="skip_login">Continue Without Account</string>
    <string name="remember_login">Remember my preference</string>
    
    <!-- Main Page -->
    <string name="btn_settings">SETTINGS</string>
    <string name="btn_social">SOCIAL</string>
    <string name="btn_projects">PROJECTS</string>
    
    <!-- Social -->
    <string name="social">Social</string>
    <string name="coming_soon">This feature is coming soon.</string>
    
    <!-- Project List -->
    
    <!-- New Project -->
    <string name="new_project">New Project</string>
    <string name="new_project_name">Name</string>
    <string name="new_project_bpm">BPM</string>
    <string name="new_project_description">Description</string>
    <string name="new_project_audio">Audio</string>
    <string name="record_audio">Record New Audio</string>
    <string name="playback_audio">Playback Existing Audio</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    
    <!-- Dashboard -->
    <string name="dashboard">Dashboard</string>
    <string name="recent_projects">Recent Projects</string>
    <string name="view_all_projects">All Projects</string>
    <string name="start_project">Start New Project</string>
    <string name="no_projects">You haven\'t started any projects yet.</string>
    <string name="view_project">&gt;</string>
    <string name="dialog_new_project">Enter a name for your project:</string>
    <string name="dialog_new_project_hint">New Project Name</string>
    
    <!-- Project Overview -->
    <string name="project_name">Project Name</string>
    <string name="project_date_created">Created on</string>
    <string name="project_audio">Audio</string>
    <string name="project_midi">MIDI</string>
    <string name="project_media">Multimedia</string>
    <string name="project_share">Share</string>
    <string name="project_play">Play</string>
    <string name="project_add_media">Add Media</string>
    
    <!-- MIDI Test -->
    <string name="save_midi_btn">Save MIDI</string>
    <string name="play_midi_btn">Play MIDI</string>

</resources>