<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF" >
 
        <!--  Header Starts-->
        <LinearLayout android:id="@+id/ll_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" >
                
            <TextView 
                android:id="@+id/tv_login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
            	android:layout_marginBottom="40dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="40sp"
                android:text="@string/app_name" />	
            
            <!-- Logo Start -->
            <!--
            <ImageView android:src="@drawable/jebbit_logo"
                android:contentDescription="@string/logo_description"
                android:layout_width="fill_parent"
                android:scaleType="fitCenter"
                android:layout_height="120dp"/>
            -->
            <!-- Logo Ends -->
            
        </LinearLayout>
        <!--  Header Ends -->
 
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/ll_footer"
		    android:layout_width="fill_parent"
		    android:layout_height="20dip"
		    android:layout_alignParentBottom="true"
          android:layout_below="@+id/ll_login_form"
		    android:background="#FEFEFE" >
		</LinearLayout>
        <!-- Footer Ends -->
 
        <!-- Login Form -->
        <LinearLayout
          android:id="@+id/ll_login_form"
          android:orientation="vertical"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/ll_header"
          android:padding="10dip" >
          <!--  Email Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/email_label" />
          <EditText android:id="@+id/et_login_email"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dip"
              android:layout_marginBottom="20dip"
              android:singleLine="true"
              android:inputType="textEmailAddress"
              android:hint="@string/email_hint" />
          
          <!--  Password Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/password_label"/>
          <EditText android:id="@+id/et_login_password"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dip"
              android:singleLine="true"
              android:inputType="textPassword"
              android:hint="@string/password_hint" />
          
          <!--  Error message -->
          <TextView android:id="@+id/tv_login_error"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textColor="#e30000"
              android:padding="10dip"
              android:textStyle="bold"
              android:visibility="gone" />
        
          <!-- Login button -->
          <Button android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:textColor="#000000"
                android:text="@string/login" />
          
          <!-- Link to Registration Screen -->
          <!--
          <TextView android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@strings/register"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000000"/>
			-->
          
          <!-- Link to Skip Login -->
          <TextView android:id="@+id/tv_skip_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="5dip"
                android:padding="10dp"
                android:visibility="visible"
                android:text="@string/skip_login"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"/>
          
          <CheckBox android:id="@+id/cb_remember_login"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/remember_login"/>
 
        </LinearLayout>
        <!-- Login Form Ends -->
 
  </RelativeLayout>
</ScrollView>