<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:background="@color/white" >
    
    <TextView
        android:id="@+id/tv_recent_projects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/recent_projects" />

    <FrameLayout
        android:id="@+id/fl_recent_projects"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_recent_projects"
        android:background="@drawable/light_box_rounded" >
        
        <TextView
            android:id="@+id/tv_no_projects"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/no_projects" />
        
    </FrameLayout>
    
    <Button
        android:id="@+id/btn_start_project"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/start_project" />
    
</RelativeLayout>